cloudformation/jenkins.yml
Description: |
    Kirsten Cassidy - Udacity Capstone Project 

Parameters:

  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: Capstone

  SSHIP:
    Description: Ip address for SSH access to bastion host
    Type: String
    Default: IP/32

  JenkinsSSHKey:
    Description: KeyName to access Jenkins
    Type: AWS::EC2::KeyPair::KeyName

Resources: 

  CapstoneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and 8080
      VpcId:
        Fn::ImportValue: !Sub ${EnvironmentName}-VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Sub ${SSHIP}
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-SG

  CapstoneEC2:
    Type: AWS::EC2::Instance
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt-get update -y
          sudo apt-get install default-jdk wget -y
          cd /home/ubuntu
          wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | sudo apt-key add -
          sudo sh -c 'echo deb http://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'
          sudo apt-get update -y
          sudo apt-get install jenkins tidy -y
          sudo systemctl status jenkins
      ImageId: ami-0d1cd67c26f5fca19
      SecurityGroupIds:
        - Ref: CapstoneSecurityGroup
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PUB-SN1
      InstanceType: t3.small
      BlockDeviceMappings:
        - DeviceName: "/dev/sdk"
          Ebs:
            VolumeSize: 10
            DeleteOnTermination: true
      KeyName: !Sub ${JenkinsSSHKey}

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain:
        Fn::ImportValue: !Sub ${EnvironmentName}-VPCID
    DependsOn: 
      - CapstoneEC2

Outputs:
  PublicUrl:
    Description: Public facing url for EC2 Instance
    Value: !Join  ['', ['http://', !GetAtt 'CapstoneEC2.PublicDnsName', ':8080']]
